--- a/app/scss/layout/_team.scss
+++ b/app/scss/layout/_team.scss
@@ -51,6 +51,7 @@
 
     &__quote-item{
         max-width: 333px;
+        margin: 0 auto;
     }
 
     // Media Queries
